--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Il mio primo progetto</title>
   </head>
-  <body>
+  <body background-color: lightblue>
     <h1>Primo progetto</h1>
     <h2></h2>
     <nav>
